# yaql

./: .gitignore  CMakeLists.txt  README.md
inc/: quat.hpp  vector3d.hpp
src/: main.cpp  quat.cpp  vector3d.cpp
test/src/: test.cpp
